[package]
name = "tradedoubler-api-client"
version = "0.1.0"
authors = ["Roman Bartusiak <riomus@gmail.com>"]

[dependencies]
hyper = "0.11"
hyper-tls = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
log="*"
tokio-core = "0.1"
futures = "0.1"
[dev-dependencies]
pretty_env_logger  = "0.1"